--- a/public/partials/users.html
+++ b/public/partials/users.html
@@ -5,11 +5,13 @@
   </div>
   <div class="large-12 row">
     <div ng-repeat="user in users" class = "userlist large-12">
-      <a href="#/user/{{user._id}}">
-        <div class="small-5 columns text-left"><b>{{user.name}}</b></div>
-        <div class="small-5 columns text-left">{{user.email}}</div>
-        <div class="small-2 columns text-center"><i class="fa fa-trash"></i></div>
-      </a>
+      <div class="small-10 columns">
+        <a href="#/user/{{user._id}}">
+          <div class="small-6 columns text-left"><b>{{user.name}}</b></div>
+          <div class="small-6 columns text-left">{{user.email}}</div>
+        </a>
+      </div>
+        <div class="small-2 columns text-center"><i class="fa fa-trash" ng-click = "delete(user._id)"></i></div>
     </div>
   </div>
 </div>
@@ -24,4 +26,5 @@
       </a>
     </div>
   </div>
+  href="#/user/{{user._id}}"
 -->
