--- a/public/partials/addtask.html
+++ b/public/partials/addtask.html
@@ -1,12 +1,14 @@
 <div class="large-10 large-centered" id = "addtask">
-	<div class="large-10 large-centered page_heading">Add Task</div>
+	<div class="large-10 large-centered page_heading row">
+        Add Task
+    </div>
 	<div class="large-10 large-centered">
 	<form name = "myform" ng-submit="register()" novalidate>
 		<fieldset>
 			Name<font color="red">*</font>
 			<input type="text" name="name" 
         		placeholder="Name"
-        		ng-model="task.name"
+        		ng-model="name"
         		ng-required="true">
         	<p class="error validationerror text-center" ng-show="myform.name.$invalid && myform.name.$touched">
         		You must fill out the task's name.
@@ -14,25 +16,31 @@
         	Description
 			<input type="text" name="descrip" 
         		placeholder="Description"
-        		ng-model="task.description">
+        		ng-model="description">
 
         	Deadline<font color="red">*</font>
-        	<input type="text" name="descrip" 
-        		placeholder="Description"
-        		ng-model="task.date"
-        		ng-required="true">
-            <p class="error validationerror text-center" ng-show="myform.descrip.$invalid && myform.descrip.$touched">
+            <datepicker>
+                <input ng-model="deadline"
+                name = "date"
+                 type="text"
+                 placeholder="Choose Date"
+                 ng-required = "true"
+                 />
+                 <!--2016-04-10T12:57:18.000Z-->
+            </datepicker>
+            <p class="error validationerror text-center" ng-show="myform.date.$invalid && myform.date.$touched">
                 You must fill out the task's deadline.
             </p>
-
+            <br>
         	User
-                <select ng-model="task.tasks_under">
-                  <option ng-repeat="user in users" value = "{{user._id}}">{{user.name}}</option>
-                </select>
+            <select ng-model="tasks_under">
+                  <option ng-repeat="user in users" value = "{{user.name}}">{{user.name}}</option>
+            </select>
                
 
 		</fieldset>
 		<button type="submit" class="button">Submit</button>
 	</form>
+    <div class="columns medium-10 medium-centered row text-center"> {{message}}</div>
 	</div>
 </div>
