--- a/public/partials/taskdetail.html
+++ b/public/partials/taskdetail.html
@@ -11,7 +11,10 @@
 				<b>Assigned User: </b>{{task.assignedUserName}} <br><br>
 				<b>Date Created: </b>{{task.dateCreated}} <br><br>
 				<b>Deadline: </b>{{task.deadline}}<br><br>
-				<div class="small-12"><b>Completed: </b>{{task.completed}}          <i class="fa fa-refresh"></i></div>
+				<div class="small-12">
+					<b>Completed: </b>{{task.completed}}
+					<i class="fa fa-refresh" ng-click="changeStatus()"></i>
+				</div>
 			</div>
 		</div>	
 	</div>
