--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -81,6 +81,9 @@ body{
 		font-size: 2em;
 		padding: 20px;
 		padding-left: 0px;
+		.page_heading_message{
+			font-size: .8em;
+		}
 	}
 
 	.button{
