--- a/public/partials/users.html
+++ b/public/partials/users.html
@@ -1,7 +1,8 @@
 <div class="large-10 large-centered" id = "user">
   <div class="large-12 row">
-    <div class="large-8 columns page_heading">Users</div>
-    <div class="large-2 columns text-right page_heading"><a class="fa fa-plus" href="#/adduser"></a></div>
+    <div class="large-4 columns page_heading">Users</div>
+    <div class="large-4 columns page_heading text-center">{{message}}</div>
+    <div class="large-4 columns text-right page_heading"><a class="fa fa-plus" href="#/adduser"></a></div>
   </div>
   <div class="large-12 row">
     <div ng-repeat="user in users" class = "userlist large-12">
